Domibus 4.2.2
- Handle runtime error while dispatching SEND_ENQUEUED messages.
- Renamed procedures and several indexes to match Oracle 11g constraints.
Domibus 4.2.1
- Use DefaultMPC value for User Messages received without the optional MPC attribute.
- Improve performance of the default view of the Messages page in Domibus Admin Console.
- Enhance the retention worker deletion strategies.
- Upgraded several libraries: CXF 3.3.9, BouncyCastle to 1.67
- Fix known issue about class cast exception on OpenJDK11 (11.0.10.0.9)
- Property domibus.logging.cxf.limit has been increased to 18000 (the size limit at which messages are truncated in the logs)
Domibus 4.2
- Added a new property domibus.logging.metadata.print - prints the AS4 metadata in the logs when org.apache.cxf is set to at least INFO in logback.xml. Defaults to true.
- Deprecated the following classes/methods:
    - eu.domibus.plugin.NotificationListener
    - eu.domibus.plugin.NotificationListenerService
    - eu.domibus.submission.WeblogicNotificationListenerService
    - eu.domibus.ext.services.DomibusPropertyManagerExt.setKnownPropertyValue(java.lang.String, java.lang.String, java.lang.String)
    - eu.domibus.ext.services.PModeExtService.updatePModeFile(byte[], java.lang.String)
- Use Domibus nested property mechanism for DSS dynamic properties for constraints and custom trusted list
- Possibility to change some DSS extension properties at runtime
- Possibility to define a higher priority for specific messages to be sent
- New isAlive RestService in DomibusCore to add to E2E Monitoring
- Possibility to monitor the connection state between C2 and C3
- API for adding/updating participants
- Extend the retention policy mechanism
- Domibus Support of Open JDK 11
- Default JMS Plugin – different queues depending on service/action
- Upgrade Wildfly to version 20 and dropped support for Wildfly 12 (incompatibilities in the new Artemis 2.x client API)
- UI page for changing the Domibus properties at runtime