@@ -170,6 +170,9 @@ domibus.entityManagerFactory.jpaProperty.hibernate.transaction.jta.platform=com.
 #The list of protocols to be excluded from CRL list (possible values: http, https, ftp, file, ldap, etc)
 #domibus.certificate.crl.excludedProtocols=
 
+#Configure http timeout (http.connection.timeout, http.socket.timeout, http.connection-manager.timeout) in seconds. Defaults to 10 seconds.
+#domibus.certificate.crl.http.timeout=10
+
 # ---------------------------------- Extensions ----------------------------------
 
 #Name of the authentication extension used to verify the chain trust. Default is CXF
