@@ -129,6 +129,9 @@ domibus.entityManagerFactory.jpaProperty.hibernate.hbm2ddl.import_files=dataset/
 #The list of protocols to be excluded from CRL list (possible values: http, https, ftp, file, ldap, etc)
 #domibus.certificate.crl.excludedProtocols=
 
+#Configure http timeout (http.connection.timeout, http.socket.timeout, http.connection-manager.timeout) in seconds. Defaults to 10 seconds.
+#domibus.certificate.crl.http.timeout=10
+
 # ---------------------------------- Plugin Security ----------------------------------
 
 #Number of plugin users login attempts before the user is deactivated (default 5)
