@@ -42,6 +42,9 @@
 #Cron expression that specifies the frequency of the certificate revocation check.
 #domain_name.domibus.certificate.check.cron=0 0 0/1 * * ?
 
+#Configure http timeout (http.connection.timeout, http.socket.timeout, http.connection-manager.timeout) in seconds. Defaults to 10 seconds.
+#domain_name.domibus.certificate.crl.http.timeout=10
+
 # ---------------------------------- Plugin Security ----------------------------------
 
 #Number of plugin users login attempts before the user is deactivated (default 5)
