@@ -59,6 +59,9 @@ domibus.certificate.check.cron=0 0 0/1 * * ?
 #Must be set on true if there is an external authentication provider. Defaults to false.
 domibus.security.ext.auth.provider.enabled=false
 
+#Configure http timeout (http.connection.timeout, http.socket.timeout, http.connection-manager.timeout) in seconds. Defaults to 10 seconds.
+domibus.certificate.crl.http.timeout=10
+
 # ---------------------------------- Extensions ----------------------------------
 #Name of the authentication extension used to verify the chain trust. Default is CXF
 domibus.extension.iam.authentication.identifier=DEFAULT_AUTHENTICATION_SPI
