@@ -1,5 +1,6 @@
 Domibus 4.2.2
 - Handle runtime error while dispatching SEND_ENQUEUED messages.
+- Add http timeout for certificate CRL download.
 - Renamed procedures and several indexes to match Oracle 11g constraints.
 Domibus 4.2.1
 - Use DefaultMPC value for User Messages received without the optional MPC attribute.
